--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,38 +1,30 @@
 server:
-  port: 8080 # CRITICAL: Cloud Run expects your app to listen on port 8080 by default
+  port: 8081
 
 spring:
   application:
     name: crm
 
-  # Cloud SQL Database Configuration (via Environment Variables)
   datasource:
-    url: ${SPRING_DATASOURCE_URL} # Cloud Run will inject this env var
-    username: ${SPRING_DATASOURCE_USERNAME} # Cloud Run will inject this env var
-    password: ${SPRING_DATASOURCE_PASSWORD} # Cloud Run will inject this env var
-    driver-class-name: com.mysql.cj.jdbc.Driver # IMPORTANT: 'driverClassName' in properties becomes 'driver-class-name' in YAML
+    url: jdbc:mysql://localhost:3306/crmdb
 
-  # For Spring Data JPA and Hibernate
+    username: root
+
+    driverClassName: com.mysql.cj.jdbc.Driver
+    password: 892987
+
   jpa:
+    #    database-platform: org.hibernate.dialect.MySQLDialect
+    #    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: none # IMPORTANT: Prevents schema changes in production
-
-  # Google Cloud SQL specific for connection pooling / direct connection
-  cloud:
-    gcp:
-      sql:
-        enabled: true
-        # This instance connection name will be injected via Cloud Run environment variable
-        instance-connection-name: ${SPRING_CLOUD_GCP_SQL_INSTANCE_CONNECTION_NAME}
-
-  # OAuth2 Security Configuration (via Environment Variables)
+      ddl-auto: none
   security:
     oauth2:
       client:
         registration:
           google:
-            client-id: ${GOOGLE_CLIENT_ID} # CRITICAL: Get from Cloud Run env var
-            client-secret: ${GOOGLE_CLIENT_SECRET} # CRITICAL: Get from Cloud Run env var
+            client-id: 525884585511-bpgg7p3514v51ad4553fiqj5s7dem2dp.apps.googleusercontent.com # Replace with your actual Client ID
+            client-secret: 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 # Replace with your actual Client Secret
             scope:
               - openid
               - profile
